<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.zendesk.example.EntryActivity">

        <TextView
            android:text="@string/subdomain_label"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <AutoCompleteTextView
            android:id="@+id/activity_entry_subdomain_edittext"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/appid_label"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <AutoCompleteTextView
            android:id="@+id/activity_entry_appid_edittext"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/clientid_label"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <AutoCompleteTextView
            android:id="@+id/activity_entry_clientid_edittext"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_extra_anonymous"
                android:id="@+id/activity_entry_anon_radiobutton"
                android:checked="true"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/activity_entry_anon_details_container"
                android:visibility="visible">

                <TextView
                    android:text="@string/anon_name_label"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"/>

                <EditText
                    android:id="@+id/activity_entry_anon_name_edittext"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/anon_email_label"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"/>

                <EditText
                    android:id="@+id/activity_entry_anon_email_edittext"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/anon_external_id_label"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"/>

                <EditText
                    android:id="@+id/activity_entry_anon_external_id_edittext"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_entry_jwt"
                android:id="@+id/activity_entry_jwt_radiobutton"
                android:checked="false"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone"
                android:id="@+id/activity_entry_jwt_details_container">

                <TextView
                    android:text="@string/jwt_useridentifer_label"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/activity_entry_jwt_useridentifer_edittext"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </RadioGroup>

        <Button
            android:id="@+id/activity_entry_ok"
            android:text="@string/label_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</ScrollView>

